[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-compliance"
version = "0.1.0"
description = "EU AI Act compliance checker for AI agent projects — scans for AIR Blackbox components and reports coverage gaps"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "AIR Blackbox", email = "compliance@airblackbox.com"},
]
keywords = ["ai", "compliance", "eu-ai-act", "audit", "agents", "langchain", "crewai", "opentelemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
air-compliance = "air_compliance.cli:main"

[project.urls]
Homepage = "https://github.com/airblackbox/air-compliance-checker"
Documentation = "https://github.com/airblackbox/air-platform/blob/main/docs/eu-ai-act-compliance.md"
Repository = "https://github.com/airblackbox/air-compliance-checker"
Issues = "https://github.com/airblackbox/air-compliance-checker/issues"

[tool.setuptools.packages.find]
include = ["air_compliance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]